CMAKE_MINIMUM_REQUIRED(VERSION 3.21)

# Project Info
PROJECT(
        wasm
        VERSION 0.1
        DESCRIPTION "Cube Shuffle")

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_EXE_LINKER_FLAGS "-framework OpenGL")
SET(OUTPUT_DIR ${CMAKE_CURRENT_LIST_DIR}/build/mac)

SET(SDL_LIBRARIES libSDL2.dylib)
SET(SDL_INCLUDE_DIRS /usr/local/Cellar/sdl2/2.0.22/include)
SET(SDL_LIBRARY_DIRS /usr/local/Cellar/sdl2/2.0.22/lib)

SET(GLEW_LIBRARIES libGLEW.dylib)
SET(GLEW_INCLUDE_DIRS /usr/local/Cellar/glew/2.2.0_1/include)
SET(GLEW_LIBRARY_DIRS /usr/local/Cellar/glew/2.2.0_1/lib)

INCLUDE_DIRECTORIES ( ${OPENGL_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS} ${SDL_INCLUDE_DIRS})
LINK_LIBRARIES( ${OPENGL_LIBRARIES} ${GLEW_LIBRARIES} ${SDL_LIBRARIES})
LINK_DIRECTORIES ( ${OPENGL_LIBRARY_DIRS} ${GLEW_LIBRARY_DIRS} ${SDL_LIBRARY_DIRS})

ADD_SUBDIRECTORY(Framework libs/glm)


ADD_EXECUTABLE( ${PROJECT_NAME}
        main.cpp
        )
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC opengl_engine)
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC SDL2)
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC GLEW)

SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${OUTPUT_DIR})